# LightOS_Compiler

./: .gitignore  DEVELOPMENT.md  INSTALLATION_GUIDE.md  LICENSE  Makefile  README.md  install.bat  install.py  install.sh  pyproject.toml
.github/workflows/: gds-render.yml
LightRail_NCE_Schematic/: DELIVERABLES.md  JLCPCB_BOM_LCSC.csv  JLCPCB_LAYOUT_REQUIREMENTS.md  JLCPCB_QUICK_START.md  JLCPCB_SUBMISSION_MANIFEST.md  README.md
LightRail_NCE_Schematic/docs/: EASYEDA_IMPORT_GUIDE.md  IMPORT_CHECKLIST.md  LightRail_NCE_BOM.csv
LightRail_NCE_Schematic/easyeda_project/: LightRail_NCE_Main.json  project.json
LightRail_NCE_Schematic/kicad_project/: Clock_Distribution.kicad_sch  Debug_Interface.kicad_sch  HBM3_Memory.kicad_sch  LightRail_NCE.kicad_pcb  LightRail_NCE.kicad_pro  LightRail_NCE.kicad_sch  PCIe_Interface.kicad_sch  PDN.kicad_sch  Thermal_Management.kicad_sch
examples/: 01_hello_lightrail.py  02_matmul_aot.py  03_ternary_analog.py  04_cpp_pipeline.cpp
lightrail/: __init__.py  cli.py  decorators.py  pipeline.py
lightrail/adapters/: __init__.py  base.py  jax_adapter.py  pytorch_adapter.py
lightrail/codegen/: __init__.py  bytecode.py  fat_binary.py  ternary.py
lightrail/ir/: ops.py  (+3 more)
rtl/: constraints.sdc  generate_gds.py  nce_core.blif  nce_core.gds  nce_core.vvp  nce_core_layout.html  nce_core_netlist.v  nce_core_tb.v  nce_core_top.v  render_gds.py  render_macro.rb  synth.ys  synthesis_stats.txt
tests/: test_codegen.py  test_dataflow.py  test_frontend.py  test_intelligence_stack.py  test_ir.py  test_passes.py  test_pipeline.py  test_topology.py
(+29 files in other folders)
